grammar_lua_based.ebnf
chunk = block .

	block = {stat} [retstat] .

	stat =  ";" | 
		 varlist "=" explist | 
		 functioncall | 
		 "break" | 
		 "do" block "end" | 
		 "while" exp ":" block "end" | 
		 "if" exp ":" block {"elseif" exp ":" block} ["else" block] "end" | 
		 "for" Name "=" exp "," exp ["," exp] "do" block "end" | 
		 "for" namelist in explist do block end | 
		 "func" funcname funcbody .

	retstat = return [explist] [";"] .

	funcname = Name {"." Name} .

	varlist = var {"," var} .

	var =  Name 
           | prefixexp "[" exp "]" 
           | prefixexp "." Name .

	namelist = Name {"," Name} .

	explist = exp {"," exp} .

	exp =  "null" | "false" | "true" | Number | String | functiondef | 
		 prefixexp | tableconstructor | exp binop exp | unop exp .

	prefixexp = var 
				| functioncall 
				| "(" exp ")" .

	functioncall = prefixexp args .

	args =  "(" [explist] ")" .

	functiondef = "func" funcbody .

	funcbody = "(" [parlist] ")" block end .

	parlist = namelist .

	tableconstructor = "{" [fieldlist] "}" .

	fieldlist = field {fieldsep field} [fieldsep] .

	field = "[" exp "]" "=" exp 
            | Name "=" exp 
            | exp .

	fieldsep = "," | ";" .

	binop = "+" | "-" | "*" | "/" | "^" | "%" |  
		 "<" | "<=" | ">" | ">=" | "==" | "!=" | 
		 "and" | "or" .

	unop = "-" | "not" | "!" .
